@@ -8,12 +8,27 @@ fin est strictement inférieure à la date de traitement et leur donne le statut
 - *Fréquence suggérée:* quotidienne
 - *Date de traitement à fournir:* date du jour
 
+
+Batch de numérotation des quittances [contract.invoice.set_number]
+==================================================================
+
+Attribut une référence à toutes les quittances validées dont la date de
+début est inférieure ou égale à la date de traitement
+
+**Ce batch doit tourner avant le batch d'émission**
+
+- *Fréquence suggérée:* quotidienne
+- *Date de traitement à fournir:* date du jour
+
+
 Batch d'émission des quittances [contract.invoice.post]
 =======================================================
 
 Fait passer toutes les quittances validées dont la date de début est
-inférieure ou égale à la date de traitement au statut "émises" et créé 
+inférieure ou égale à la date de traitement au statut "émises" et crée
 les lignes de mouvements correspondantes.
+
+**Ce batch doit tourner après le batch de numérotation**
 
 - *Fréquence suggérée:* quotidienne
 - *Date de traitement à fournir:* date du jour
